feat: 채팅방 리스트 API 추가